[package]
name = "jpw3gen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.9"
pathdiff = "0.2.1"
regex = "1.10.4"
chrono = { version = "0.4.42", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"